Fixed size of wall items on mobile

--- a/app/assets/stylesheets/post.css.scss
+++ b/app/assets/stylesheets/post.css.scss
@@ -177,7 +177,7 @@
     @include paper;
     
     
-    width: 100%;
+    width: 250px;
     padding: 0;
 
     @media(min-width: $extra-small-device) {
